# rust-comp-geo

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/geometry/: mod.rs  point.rs  types.rs
src/geometry/angle/: angle.rs  mod.rs
src/geometry/path/: path.rs
src/geometry/point/: point.rs
src/geometry/stroke/: arc.rs  mod.rs  segment.rs  stroke.rs
src/geometry/types/: mod.rs  stroke_types.rs  types.rs
src/quadtree/: mod.rs  quadtree.rs  quadtree_circle.rs  quadtree_point.rs  types.rs  utils.rs
src/utils/: utils.rs
tests/: mod.rs
tests/geometry/: mod.rs  path_test.rs  point_test.rs  segment_test.rs  stroke_test.rs  types_test.rs
tests/quadtree/: mod.rs  quadtree_test.rs
tests/utils/: utils_test.rs
